# MarioBros

./: .idea.rar  CMakeLists.txt  README.md  brick.h  camera.h  coin.h  definitions.h  enemy.h  fase1.h  fase2.h  fase3.h  fase4.h  fase5.h  fase6.h  fases.h  gameTimer.h  itemblock.h  main.c  menu.h  ranking.h  sound.h  sprite.h  startup.h  themesong.h  tileMap.h
Debug/: DeteccaoColisao
Debug/resources/Mapas/: mapa1.txt
Debug/resources/Sprites/Enemies/Goomba/: Goomba.psd
Debug/resources/Sprites/Misc/: Logo.psd  ranking.txt
Debug/resources/Sprites/Misc/Mapa/: arvore coords.txt
Debug/resources/resources/Sprites/Mario/: Mario.psd
Debug/resources/resources/Sprites/Misc/: ranking.txt
Debug/resources/resources/Sprites/Misc/Mapa/: Mapa.psd
